  * [arm] Compile CONFIG_BLK_DEV_SL82C105 support into the kernel on
    Footbridge.
  * [arm] Compile ext3 support into the kernel on Footbridge.
  * [arm] Turn on CONFIG_SERIAL_8250 support on Footbridge.

  [ Sven Luther ]
  * [powerpc] Fixed apus patch for 2.6.15-rc7 (and beyond hopefully).
  * [powerpc] Fixed config options, but i guess jonas broke it again with his
    cleanup, oh well :)
  
  [ Jurij Smakov ]
  * [sparc] Correct the patch for the atyfb framebuffer driver
    (sparc64-atyfb-xl-gr.patch) to finally fix the console and X
    image defects on Blade 100/150. The new patch is named
    sparc64-atyfb-xl-gr-final.patch to avoid the confusion.
    Thanks to Luis F. Ortiz for fixing the patch and Luigi Gangitano
    for testing it out.
  
 -- Sven Luther <luther@debian.org>  Thu, 29 Dec 2005 09:48:36 +0000

linux-2.6 (2.6.14+2.6.15-rc5-0experimental.1) experimental; urgency=low

  * New upstream release candidate.
  * Rename i386 368 flavour to 486.
  * Add myself to uploaders.

 -- Frederik Schüler <fs@debian.org>  Fri,  9 Dec 2005 16:30:06 +0000

linux-2.6 (2.6.14+2.6.15-rc4-0experimental.1) experimental; urgency=low

  [ Frederik Schüler ]
  * New upstream release candidate.
  * Readdition of qla2xxx drivers, as firmware license has been fixed.
  * Make CONFIG_PACKET, PACKET_MM and UNIX builtin on all architectures:
    statically linked has better performance then modules due to TLB issue.
  * clean up debian-patches dir: remove all obsolete patches:
    - alpha-compile-fix.patch: obsolete
    - amd64-int3-fix.patch: fixed since 2.6.12
    - net-ipconntrack-nat-fix.patch: merged upstream after 2.6.14 release
    - net-nf_queue-oops.patch: merged upstream after 2.6.14 release
    - qla2xxx-removed.patch: obsolete
  * Drop M386 support remains from the i386 386 flavour: built with M486 
    from now on.

  [ Simon Horman ]
  * Enable MKISS globally (closes: #340215)
  * Add recommends libc6-i686 to 686 and k7 image packages
    (closes: #278729)