@@ -93,14 +93,7 @@ ifneq ($(SUBARCH),none)
 endif
 $(BUILD_DIR)/config.$(ARCH)-$(SUBARCH)-$(FLAVOUR): $(basedir)/config.$(FLAVOUR) $(config_common)
 	@echo "Generating configuration file $@:"
-	rm -f '$@'
-	for i in $(config_common); do	\
-	  if [ -f "$${i}" ]; then	\
-	    cat "$${i}" >> '$@';	\
-	  fi;				\
-	done
-#	Flavour config file must be present
-	cat '$(basedir)/config.$(FLAVOUR)' >> '$@'
+	debian/bin/kconfig.ml -b "$(basedir)" -a "$(ARCH)" -s "$(SUBARCH)" -f "$(FLAVOUR)" > '$@'
 
 $(BUILD_DIR)/linux-source-$(UPSTREAM_VERSION).tar.bz2: SOURCE_DIR=$(BUILD_DIR)/source
 $(BUILD_DIR)/linux-source-$(UPSTREAM_VERSION).tar.bz2: DIR = $(BUILD_DIR)/linux-source-$(UPSTREAM_VERSION)
