@@ -44,6 +44,12 @@ linux-2.6 (2.6.14+2.6.15-rc7-0experimental.1) UNRELEASED; urgency=low
   * [powerpc] Fixed apus patch for 2.6.15-rc7 (and beyond hopefully).
   * [powerpc] Fixed config options, but i guess jonas broke it again with his
     cleanup, oh well :)
+  * Added debian/bin/kconfig.ml to process config file snipplet, so we can
+    preserve the pre 2.6.15 ordering of config file snipplets. Upto 2.6.15
+    the kernel Kconfig magic apparently kept the later occuring config options,
+    but it seems that this is no more the case. Instead of catting the config
+    files together, not use the kconfig.ml script to read in the files from
+    more generic to more specific, and keep only the more specific.
   
   [ Jurij Smakov ]
   * [sparc] Correct the patch for the atyfb framebuffer driver
